--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :body %><br>
-    <%= f.cktext_area :body, :value => 'Default Value', :ckeditor => {:language => 'en'} %>
+    <%= f.cktext_area :body, :value => 'Default Value', :ckeditor => {:language => 'en', :toolbar => 'mini', :uiColor => '#AADC6E', :toolbarLocation => 'bottom'} %>
   </div>
   <div class="actions">
     <%= f.submit %>
